compiler/testData/cli/jvm/internalArgWrongPrefix.out
warning: flag is not supported by this version of the compiler: -XX:+InlineClasses
compiler/testData/cli/jvm/inlineClass.kt:1:1: error: the feature "inline classes" is only available since language version 1.3
inline class Foo(val x: Int)
^
COMPILATION_ERROR
